Creo la rama login para implementar el login de la app

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,7 @@ name: Pipeline
 on:
   push:
     branches:
-      - SinLogin
+      - none
 
 permissions:
   checks: write # Permite escribir check runs para mostrar resultados de tests
