--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -99,10 +99,23 @@ jobs:
         run: sudo apt-get install -y xmlstarlet
       - name: Add line-rate to Clover XML
         run: |
+          set -e
+          echo "Modifying clover.xml to add line-rate..."
           STATEMENTS=$(xmlstarlet sel -t -v "//coverage/project/metrics/@statements" frontend/coverage/clover.xml)
           COVERED=$(xmlstarlet sel -t -v "//coverage/project/metrics/@coveredstatements" frontend/coverage/clover.xml)
+          if [ -z "$STATEMENTS" ] || [ -z "$COVERED" ] || [ "$STATEMENTS" -eq 0 ]; then
+            echo "Error: Could not extract statements or coveredstatements, or statements is zero"
+            exit 1
+          fi
           LINE_RATE=$(echo "scale=4; $COVERED / $STATEMENTS" | bc)
+          xmlstarlet ed -L -u "//coverage/project/metrics/@line-rate" -v "$LINE_RATE" frontend/coverage/clover.xml || \
           xmlstarlet ed -L -s "//coverage/project/metrics" -t attr -n "line-rate" -v "$LINE_RATE" frontend/coverage/clover.xml
+          echo "line-rate=$LINE_RATE added to clover.xml"
+      - name: Verify Modified Clover XML
+        run: |
+          echo "Verifying modified clover.xml..."
+          head -n 20 frontend/coverage/clover.xml || echo "Error: modified clover.xml is empty or unreadable"
+          xmlstarlet sel -t -v "//coverage/project/metrics/@line-rate" frontend/coverage/clover.xml || echo "Error: line-rate not found in modified clover.xml"
       - name: Code Coverage Summary
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
