--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -101,7 +101,7 @@ jobs:
           files: ./frontend/coverage/lcov.info
           fail_ci_if_error: true
           verbose: true
-          token: ""
+          token: ${{ secrets.CODECOV_TOKEN }}
       - name: Write Coverage to Summary
         run: |
           echo "## Frontend Coverage Summary" >> $GITHUB_STEP_SUMMARY
