--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -95,18 +95,41 @@ jobs:
           name: Jest Results
           path: frontend/junit.xml
           reporter: jest-junit
-      - name: Upload Coverage to Codecov
-        uses: codecov/codecov-action@v5
-        with:
-          files: ./frontend/coverage/lcov.info
-          fail_ci_if_error: true
-          verbose: true
-          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Check JSON Coverage File
+        run: |
+          echo "Checking coverage-final.json file..."
+          ls -l frontend/coverage/coverage-final.json || echo "Error: coverage-final.json not found"
+          if [ -f frontend/coverage/coverage-final.json ]; then
+            head -n 20 frontend/coverage/coverage-final.json || echo "Error: coverage-final.json is empty or unreadable"
+            echo "Full JSON structure (summary):"
+            jq 'keys' frontend/coverage/coverage-final.json
+          else
+            echo "Error: coverage-final.json does not exist"
+            exit 1
+          fi
       - name: Write Coverage to Summary
         run: |
           echo "## Frontend Coverage Summary" >> $GITHUB_STEP_SUMMARY
-          # Extraer el porcentaje de cobertura de líneas del reporte de texto
-          COVERAGE=$(grep "Lines" frontend/coverage/lcov-report/index.html | grep -o "[0-9.]\+%" | head -n 1 || echo "N/A")
+          echo "Extracting coverage from coverage-final.json..." >> $GITHUB_STEP_SUMMARY
+          if [ ! -f frontend/coverage/coverage-final.json ]; then
+            echo "Error: coverage-final.json not found" >> $GITHUB_STEP_SUMMARY
+            echo "| File | Line Coverage |" >> $GITHUB_STEP_SUMMARY
+            echo "|------|---------------|" >> $GITHUB_STEP_SUMMARY
+            echo "| All files | N/A |" >> $GITHUB_STEP_SUMMARY
+            exit 1
+          fi
+          # Contar statements totales (claves en statementMap)
+          TOTAL_STATEMENTS=$(jq '[.[] | .statementMap | length] | add // 0' frontend/coverage/coverage-final.json)
+          # Contar statements cubiertos (claves en s con valor > 0)
+          COVERED_STATEMENTS=$(jq '[.[] | .s | to_entries[] | select(.value > 0) | .key] | length // 0' frontend/coverage/coverage-final.json)
+          echo "Total statements: $TOTAL_STATEMENTS" >> $GITHUB_STEP_SUMMARY
+          echo "Covered statements: $COVERED_STATEMENTS" >> $GITHUB_STEP_SUMMARY
+          if [ "$TOTAL_STATEMENTS" -eq 0 ]; then
+            COVERAGE="0.00%"
+          else
+            COVERAGE=$(echo "scale=2; ($COVERED_STATEMENTS * 100) / $TOTAL_STATEMENTS" | bc)
+            COVERAGE="$COVERAGE%"
+          fi
           echo "| File | Line Coverage |" >> $GITHUB_STEP_SUMMARY
           echo "|------|---------------|" >> $GITHUB_STEP_SUMMARY
           echo "| All files | $COVERAGE |" >> $GITHUB_STEP_SUMMARY
