--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -95,136 +95,51 @@ jobs:
           name: Jest Results
           path: frontend/junit.xml
           reporter: jest-junit
-      #- name: Write Coverage to Summary
-      #  run: |
-      #    echo "## Frontend Coverage Summary" >> $GITHUB_STEP_SUMMARY
-      #    echo "Extracting coverage from coverage-final.json..." >> $GITHUB_STEP_SUMMARY
-      #    if [ ! -f frontend/coverage/coverage-final.json ]; then
-      #      echo "Error: coverage-final.json not found" >> $GITHUB_STEP_SUMMARY
-      #      echo "| File | Line Coverage |" >> $GITHUB_STEP_SUMMARY
-      #      echo "|------|---------------|" >> $GITHUB_STEP_SUMMARY
-      #      echo "| All files | N/A |" >> $GITHUB_STEP_SUMMARY
-      #      exit 1
-      #    fi
-      #    # Contar statements totales (claves en statementMap)
-      #    TOTAL_STATEMENTS=$(jq '[.[] | .statementMap | length] | add // 0' frontend/coverage/coverage-final.json)
-      #    # Contar statements cubiertos (claves en s con valor > 0)
-      #    COVERED_STATEMENTS=$(jq '[.[] | .s | to_entries[] | select(.value > 0) | .key] | length // 0' frontend/coverage/coverage-final.json)
-      #    echo "Total statements: $TOTAL_STATEMENTS" >> $GITHUB_STEP_SUMMARY
-      #    echo "Covered statements: $COVERED_STATEMENTS" >> $GITHUB_STEP_SUMMARY
-      #    if [ "$TOTAL_STATEMENTS" -eq 0 ]; then
-      #      COVERAGE="0.00%"
-      #    else
-      #      COVERAGE=$(echo "scale=2; ($COVERED_STATEMENTS * 100) / $TOTAL_STATEMENTS" | bc)
-      #      COVERAGE="$COVERAGE%"
-      #    fi
-      #    echo "| File | Line Coverage |" >> $GITHUB_STEP_SUMMARY
-      #    echo "|------|---------------|" >> $GITHUB_STEP_SUMMARY
-      #    echo "| All files | $COVERAGE |" >> $GITHUB_STEP_SUMMARY
       - name: Write Coverage to Summary
         run: |
           echo "## Frontend Coverage Summary" >> $GITHUB_STEP_SUMMARY
-          echo "| Package | Line Rate | Complexity | Health |" >> $GITHUB_STEP_SUMMARY
-          echo "|---------|-----------|------------|--------|" >> $GITHUB_STEP_SUMMARY
-              
+          echo "Extracting coverage from coverage-final.json..." >> $GITHUB_STEP_SUMMARY
           if [ ! -f frontend/coverage/coverage-final.json ]; then
             echo "Error: coverage-final.json not found" >> $GITHUB_STEP_SUMMARY
-            echo "| All files | N/A | 0 | ❌ |" >> $GITHUB_STEP_SUMMARY
+            echo "| File | Line Coverage |" >> $GITHUB_STEP_SUMMARY
+            echo "|------|---------------|" >> $GITHUB_STEP_SUMMARY
+            echo "| All files | N/A |" >> $GITHUB_STEP_SUMMARY
             exit 1
           fi
-              
-          # Verificar si el JSON es un objeto
-          JSON_TYPE=$(jq 'type' frontend/coverage/coverage-final.json || echo "invalid")
-          if [ "$JSON_TYPE" != "object" ]; then
-            echo "Error: coverage-final.json is not a valid object (type: $JSON_TYPE)" >> $GITHUB_STEP_SUMMARY
-            echo "| All files | N/A | 0 | ❌ |" >> $GITHUB_STEP_SUMMARY
-            exit 1
-          fi
-              
-          # Obtener la lista de paquetes (directorios únicos) de forma más robusta
-          PACKAGES=$(jq -r 'keys[] | split("/") | if length > 3 then .[0:-1] | join("/") else "." end | unique[]' frontend/coverage/coverage-final.json 2>/dev/null || echo ".")
-              
-          TOTAL_STATEMENTS_ALL=0
-          COVERED_STATEMENTS_ALL=0
-              
-          # Procesar cada paquete
-          for PACKAGE in $PACKAGES; do
-            # Convertir paquete a formato para jq
-            if [ "$PACKAGE" = "." ]; then
-              TOTAL_STATEMENTS=$(jq '[.[] | .statementMap | length] | add // 0' frontend/coverage/coverage-final.json)
-              COVERED_STATEMENTS=$(jq '[.[] | .s | to_entries[] | select(.value > 0) | .key] | length // 0' frontend/coverage/coverage-final.json)
-            else
-              PACKAGE_PATH=$(echo "$PACKAGE" | sed 's/\./\\./g')
-              TOTAL_STATEMENTS=$(jq "[.[] | select(.path | test(\"^.*$PACKAGE_PATH\")) | .statementMap | length] | add // 0" frontend/coverage/coverage-final.json)
-              COVERED_STATEMENTS=$(jq "[.[] | select(.path | test(\"^.*$PACKAGE_PATH\")) | .s | to_entries[] | select(.value > 0) | .key] | length // 0" frontend/coverage/coverage-final.json)
-            fi
-              
-            # Acumular totales para el resumen
-            TOTAL_STATEMENTS_ALL=$((TOTAL_STATEMENTS_ALL + TOTAL_STATEMENTS))
-            COVERED_STATEMENTS_ALL=$((COVERED_STATEMENTS_ALL + COVERED_STATEMENTS))
-              
-            # Calcular porcentaje de cobertura
-            if [ "$TOTAL_STATEMENTS" -eq 0 ]; then
-              LINE_RATE="0%"
-            else
-              LINE_RATE=$(echo "scale=2; ($COVERED_STATEMENTS * 100) / $TOTAL_STATEMENTS" | bc)
-              LINE_RATE="$LINE_RATE%"
-            fi
-              
-            # Determinar indicador de salud
-            if [ "$TOTAL_STATEMENTS" -eq 0 ]; then
-              HEALTH="❌"
-            else
-              LINE_RATE_INT=$(echo "$LINE_RATE" | sed 's/%//')
-              if [ $(echo "$LINE_RATE_INT >= 80" | bc) -eq 1 ]; then
-                HEALTH="✔"
-              elif [ $(echo "$LINE_RATE_INT >= 50" | bc) -eq 1 ]; then
-                HEALTH="➖"
-              else
-                HEALTH="❌"
-              fi
-            fi
-              
-            # Añadir fila a la tabla
-            echo "| $PACKAGE | $LINE_RATE | 0 | $HEALTH |" >> $GITHUB_STEP_SUMMARY
-          done
-              
-          # Calcular resumen general
-          if [ "$TOTAL_STATEMENTS_ALL" -eq 0 ]; then
-            SUMMARY_RATE="0%"
-            SUMMARY_HEALTH="❌"
+          # Contar statements totales (claves en statementMap)
+          TOTAL_STATEMENTS=$(jq '[.[] | .statementMap | length] | add // 0' frontend/coverage/coverage-final.json)
+          # Contar statements cubiertos (claves en s con valor > 0)
+          COVERED_STATEMENTS=$(jq '[.[] | .s | to_entries[] | select(.value > 0) | .key] | length // 0' frontend/coverage/coverage-final.json)
+          echo "Total statements: $TOTAL_STATEMENTS" >> $GITHUB_STEP_SUMMARY
+          echo "Covered statements: $COVERED_STATEMENTS" >> $GITHUB_STEP_SUMMARY
+          if [ "$TOTAL_STATEMENTS" -eq 0 ]; then
+            COVERAGE="0.00%"
           else
-            SUMMARY_RATE=$(echo "scale=2; ($COVERED_STATEMENTS_ALL * 100) / $TOTAL_STATEMENTS_ALL" | bc)
-            SUMMARY_RATE="$SUMMARY_RATE%"
-            if [ $(echo "$SUMMARY_RATE >= 80" | bc) -eq 1 ]; then
-              SUMMARY_HEALTH="✔"
-            elif [ $(echo "$SUMMARY_RATE >= 50" | bc) -eq 1 ]; then
-              SUMMARY_HEALTH="➖"
-            else
-              SUMMARY_HEALTH="❌"
-            fi
+            COVERAGE=$(echo "scale=2; ($COVERED_STATEMENTS * 100) / $TOTAL_STATEMENTS" | bc)
+            COVERAGE="$COVERAGE%"
           fi
-              
-          echo "| **Summary** | **$SUMMARY_RATE ($COVERED_STATEMENTS_ALL / $TOTAL_STATEMENTS_ALL)** | **0** | **$SUMMARY_HEALTH** |" >> $GITHUB_STEP_SUMMARY
-            - name: Upload Frontend Coverage Report
-              uses: actions/upload-artifact@v4
-              with:
-                name: frontend-coverage-report
-                path: frontend/coverage/
-                if-no-files-found: warn
-            - name: Build Frontend
-              run: |
-                cd frontend
-                npm run build
-            - name: Copy staticwebapp.config.json to dist
-              run: |
-                cp frontend/staticwebapp.config.json frontend/dist/
-            - name: Upload Frontend Artifact
-              uses: actions/upload-artifact@v4
-              with:
-                name: frontend-artifact
-                path: frontend/dist/
-                if-no-files-found: error
+          echo "| File | Line Coverage |" >> $GITHUB_STEP_SUMMARY
+          echo "|------|---------------|" >> $GITHUB_STEP_SUMMARY
+          echo "| All files | $COVERAGE |" >> $GITHUB_STEP_SUMMARY
+      - name: Upload Frontend Coverage Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-coverage-report
+          path: frontend/coverage/
+          if-no-files-found: warn
+      - name: Build Frontend
+        run: |
+          cd frontend
+          npm run build
+      - name: Copy staticwebapp.config.json to dist
+        run: |
+          cp frontend/staticwebapp.config.json frontend/dist/
+      - name: Upload Frontend Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-artifact
+          path: frontend/dist/
+          if-no-files-found: error
 
   #==========================================
   # STAGE: DEPLOY TO QA AND INTEGRATION TEST
