--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -95,38 +95,29 @@ jobs:
           name: Jest Results
           path: frontend/junit.xml
           reporter: jest-junit
-      - name: Write Coverage to Summary
+      - name: Write Frontend Coverage to Summary
         run: |
-          echo "## Frontend Test Summary" >> $GITHUB_STEP_SUMMARY
-          echo "### Unit Test Coverage" >> $GITHUB_STEP_SUMMARY
-          echo "| Package | Line Rate | Complexity | Health |" >> $GITHUB_STEP_SUMMARY
-          echo "|---------|-----------|------------|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "## Frontend Test Coverage by File" >> $GITHUB_STEP_SUMMARY
+          echo "| File | % Statements | % Branches | % Functions | % Lines |" >> $GITHUB_STEP_SUMMARY
+          echo "|------|--------------|------------|-------------|----------|" >> $GITHUB_STEP_SUMMARY
 
-          # Procesar cobertura unitaria
-          if [ -f frontend/coverage/coverage-final.json ]; then
-            TOTAL_STATEMENTS=$(jq '[.[] | .statementMap | length] | add // 0' frontend/coverage/coverage-final.json)
-            COVERED_STATEMENTS=$(jq '[.[] | .s | to_entries[] | select(.value > 0) | .key] | length // 0' frontend/coverage/coverage-final.json)
-            echo "Total statements: $TOTAL_STATEMENTS" >> $GITHUB_STEP_SUMMARY
-            echo "Covered statements: $COVERED_STATEMENTS" >> $GITHUB_STEP_SUMMARY
-            if [ "$TOTAL_STATEMENTS" -eq 0 ]; then
-              COVERAGE="0.00%"
-              HEALTH="❌"
-            else
-              COVERAGE=$(echo "scale=2; ($COVERED_STATEMENTS * 100) / $TOTAL_STATEMENTS" | bc)
-              COVERAGE="$COVERAGE%"
-              LINE_RATE_INT=$(echo "$COVERAGE" | sed 's/%//')
-              if [ $(echo "$LINE_RATE_INT >= 80" | bc) -eq 1 ]; then
-                HEALTH="✔"
-              elif [ $(echo "$LINE_RATE_INT >= 50" | bc) -eq 1 ]; then
-                HEALTH="➖"
-              else
-                HEALTH="❌"
-              fi
-            fi
-            echo "| All files | $COVERAGE | 0 | $HEALTH |" >> $GITHUB_STEP_SUMMARY
+          if [ -f frontend/coverage/coverage-summary.json ]; then
+            jq -r '
+              to_entries[] 
+              | select(.key != "total") 
+              | [
+                  .key,
+                  (.value.statements.pct | tostring + "%"),
+                  (.value.branches.pct | tostring + "%"),
+                  (.value.functions.pct | tostring + "%"),
+                  (.value.lines.pct | tostring + "%")
+                ]
+              | @tsv
+            ' frontend/coverage/coverage-summary.json | while IFS=$'\t' read -r file stmt brnch func line; do
+              echo "| $file | $stmt | $brnch | $func | $line |" >> $GITHUB_STEP_SUMMARY
+            done
           else
-            echo "Error: coverage-final.json not found" >> $GITHUB_STEP_SUMMARY
-            echo "| All files | N/A | 0 | ❌ |" >> $GITHUB_STEP_SUMMARY
+            echo "⚠️ No se encontró coverage-summary.json" >> $GITHUB_STEP_SUMMARY
           fi
       - name: Upload Frontend Coverage Report
         uses: actions/upload-artifact@v4
@@ -226,42 +217,30 @@ jobs:
           name: Cypress Results
           path: frontend/cypress/results.xml
           reporter: java-junit
-      - name: Summarize Integration Test Results
-        if: always()
+      - name: Write Integration Test Coverage to Summary
         run: |
-          echo "## Integration Tests Summary" >> $GITHUB_STEP_SUMMARY
-          echo "| Package | Tests Passed | Tests Failed | Health |" >> $GITHUB_STEP_SUMMARY
-          echo "|---------|--------------|--------------|--------|" >> $GITHUB_STEP_SUMMARY
-          if [ -f frontend/cypress/results.xml ]; then
-            PASSED=$(grep -c "<testcase " frontend/cypress/results.xml | awk '{s+=$1} END {print s}' || echo "0")
-            FAILED=$(grep -c "<failure>" frontend/cypress/results.xml || echo "0")
-            TOTAL=$((PASSED + FAILED))
-            if [ "$TOTAL" -eq 0 ]; then
-              HEALTH="❌"
-              RATE="N/A"
-            else
-              RATE=$(echo "scale=2; ($PASSED * 100) / $TOTAL" | bc)%
-              if [ $(echo "$RATE >= 80" | bc) -eq 1 ]; then
-                HEALTH="✔"
-              elif [ $(echo "$RATE >= 50" | bc) -eq 1 ]; then
-                HEALTH="➖"
-              else
-                HEALTH="❌"
-              fi
-            fi
-            echo "| Integration Tests | $PASSED / $TOTAL | $FAILED | $HEALTH |" >> $GITHUB_STEP_SUMMARY
+          echo "## Integration Test Coverage by File" >> $GITHUB_STEP_SUMMARY
+          echo "| File | % Statements | % Branches | % Functions | % Lines |" >> $GITHUB_STEP_SUMMARY
+          echo "|------|--------------|------------|-------------|----------|" >> $GITHUB_STEP_SUMMARY
+
+          if [ -f frontend/coverage/coverage-summary.json ]; then
+            jq -r '
+              to_entries[] 
+              | select(.key != "total") 
+              | [
+                  .key,
+                  (.value.statements.pct | tostring + "%"),
+                  (.value.branches.pct | tostring + "%"),
+                  (.value.functions.pct | tostring + "%"),
+                  (.value.lines.pct | tostring + "%")
+                ]
+              | @tsv
+            ' frontend/coverage/coverage-summary.json | while IFS=$'\t' read -r file stmt brnch func line; do
+              echo "| $file | $stmt | $brnch | $func | $line |" >> $GITHUB_STEP_SUMMARY
+            done
           else
-            echo "| Integration Tests | N/A | N/A | ❌ |" >> $GITHUB_STEP_SUMMARY
+            echo "⚠️ No se encontró coverage-summary.json para integración" >> $GITHUB_STEP_SUMMARY
           fi
-      - name: Jest Coverage Report
-        uses: ArtiomTr/jest-coverage-report-action@v2
-        with:
-          working-directory: frontend
-          output: report-markdown
-      - name: Write Coverage to Summary
-        run: |
-          echo "## Jest Coverage Summary" >> $GITHUB_STEP_SUMMARY
-          cat frontend/report-markdown >> $GITHUB_STEP_SUMMARY
       - name: Upload Cypress Coverage Report
         uses: actions/upload-artifact@v4
         with:
