Corrigiendo reportes de coverage de test de integracion  en github actions

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -95,6 +95,10 @@ jobs:
           name: Jest Results
           path: frontend/junit.xml
           reporter: jest-junit
+      - name: Install xmlstarlet
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xmlstarlet
       - name: Write Frontend Coverage to Summary
         run: |
           echo "## Frontend Unit Test Coverage" >> $GITHUB_STEP_SUMMARY
