--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -106,9 +106,9 @@ jobs:
           echo "|---------|-----------|------------|--------|" >> $GITHUB_STEP_SUMMARY
 
           if [ -f frontend/coverage/clover.xml ]; then
-            # Extraer métricas por paquete
-            xmlstarlet sel -t -m "//package" -v "concat(@name, '|', if (metrics/@statements = 0) then 0 else (metrics/@coveredstatements * 100) div metrics/@statements, '|0|')" -n frontend/coverage/clover.xml | while IFS='|' read -r PACKAGE LINE_RATE _ HEALTH; do
-              echo "Processing package: $PACKAGE, LINE_RATE: $LINE_RATE" >&2
+            # Extraer métricas por archivo
+            xmlstarlet sel -t -m "//file" -v "concat(@name, '|', if (metrics/@statements = 0) then 0 else (metrics/@coveredstatements * 100) div metrics/@statements, '|0|')" -n frontend/coverage/clover.xml | while IFS='|' read -r FILE LINE_RATE _ HEALTH; do
+              echo "Processing file: $FILE, LINE_RATE: $LINE_RATE" >&2
               if [ -z "$LINE_RATE" ] || [ "$LINE_RATE" = "0" ]; then
                 LINE_RATE_INT=0
                 LINE_RATE="0%"
@@ -124,7 +124,7 @@ jobs:
                   HEALTH="❌"
                 fi
               fi
-              echo "| $PACKAGE | $LINE_RATE | 0 | $HEALTH |" >> $GITHUB_STEP_SUMMARY
+              echo "| $FILE | $LINE_RATE | 0 | $HEALTH |" >> $GITHUB_STEP_SUMMARY
             done
 
             # Extraer métricas totales
